# flutter_tflite_tts_plugin

./: .gitignore  .gitmodules  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/avinium/flutter_tflite_tts_plugin/: TfliteTtsPlugin.kt
android/src/main/kotlin/com/avinium/tflite_tts/: TfliteTtsPlugin.kt
android/src/main/kotlin/com/example/incredible_tts/: IncredibleTtsPlugin.kt
example/: .gitignore  README.md  pubspec.yaml
example/android/: build.gradle
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/avinium/tflite_tts_example/: MainActivity.kt
example/android/app/src/main/kotlin/com/example/incredible_tts_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/assets/: baker_mapper.json  tts_config.json
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutter_tflite_tts_plugin.podspec  incredible_tts.podspec  tflite_tts.podspec
ios/Classes/: IncredibleTtsPlugin.h  IncredibleTtsPlugin.m  SwiftIncredibleTtsPlugin.swift  SwiftTfliteTtsPlugin.swift  TfliteTtsPlugin.h  TfliteTtsPlugin.mm
ios/lib/: libtensorflowlite.dylib
ios/src/: TextToSpeech.cpp  TextToSpeech.hpp  synthesize.cpp  synthesize.hpp  synthesize_android.cpp
ios/src/android/: TextToSpeechAndroid.cpp
ios/src/include/: TfliteBase.h
ios/src/include/mmap/: mmap_stream.hpp  mmap_stream_android.hpp
ios/src/tensorflowtts/: MelGenerateTF.cpp  MelGenerateTF.h  TTSBackend.cpp  TTSBackend.h  TfliteBase.cpp  TfliteBase.h  VocoderTF.cpp  VocoderTF.h
lib/: incredible_tts.dart  preprocessor.dart  tflite_tts.dart  tts_plugin.dart
lib/preprocesors/: baker.dart
test/: incredible_tts_test.dart
